grammar.bnf
program ::= statement_list

statement_list ::= statement
                | statement statement_list

statement ::= comment 
            | layer_definition 
            | function_definition

comment ::= "#" comment_text "\n"

comment_text ::= any_char comment_text 
                | ε

layer_definition ::= "layer" IDENT "=" layer_type "(" parameter_list ")" ";" 
                    | IDENT "=" layer_type "(" parameter_list ")" ";"

layer_type ::= "dense" 
                | "conv1d" 
                | "conv2d"

function_definition ::= "func" IDENT "(" parameter_list ")" "return" type "{" function_body "}"

function_body ::= statement_list_in_function

statement_list_in_function ::= function_statement 
                            | function_statement statement_list_in_function

function_statement ::= assignment 
                    | return_statement

assignment ::= IDENT "=" <expression> ";" 
            | IDENT "=" <expression>

return_statement ::= "return" <expression> ";"

expression ::= IDENT 
            | function_call
            | builtin_call

builtin_call ::= builtin_function "(" argument_list ")"

builtin_function ::= "transpose" 
                    | "matmul" 
                    | "add" 
                    | "relu" 
                    | "sigmoid" 
                    | "tanh" 
                    | "softmax"

function_call ::= IDENT "(" argument_list ")"

parameter_list ::= parameter 
                | parameter "," parameter_list 
                | ε

parameter ::= type IDENT 
            | number

argument_list ::= expression 
                | expression "," argument_list 
                | ε

type ::= primitive_type 
        | array_type 
        | multi_dim_array_type

primitive_type ::= "float" 
                | "int" 
                | "bool"

array_type ::= primitive_type "[" number "]"

multi_dim_array_type ::= primitive_type dimension_list

dimension_list ::= "[" number "]" dimension_list 
                | "[" number "]"

number ::= digit number_rest

number_rest ::= digit number_rest | ε

letter ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"

digit ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9"

IDENT ::= letter ident_rest

ident_rest ::= letter ident_rest | digit ident_rest | ε

any_char ::= letter | digit | " " | "=" | "*" | "+" | "^" | "T" | "(" | ")" | "[" | "]" | "," | "."
